--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                     </div>
                 </div>
                 <div class="about-Louie">
-                    <p>Hello! My name is Llewil Aeneid Montilla. I go by Louie.</p>
-                    <p>I am a new Software Developer fresh in the tech industry. I graduated in Coding Dojo March of
-                        2022 and am proficient in Web Fundamentals,
-                        Python, MERN and Java.
+                    <p>
+                        My name is Louie. I am a ighly motivated graduate from a Software Development program focusing on web fundamentals,
+                        Python, MERN, and Java. Seeking an entry level position as a Full Stack Software Developer, to follow my
+                        passion for technological innovation and making advancements more accessible. Experienced in
+                        fast-paced cooperative environments, with strong communication skills from my background in patient
+                        care.
                     </p>
                 </div>
             </div>
