--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="about-Louie">
                     <p>
-                        My name is Louie. I am a ighly motivated graduate from a Software Development program focusing on web fundamentals,
+                        My name is Louie. I am a highly motivated graduate from a Software Development program focusing on web fundamentals,
                         Python, MERN, and Java. Seeking an entry level position as a Full Stack Software Developer, to follow my
                         passion for technological innovation and making advancements more accessible. Experienced in
                         fast-paced cooperative environments, with strong communication skills from my background in patient
