--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <div class="nav-buttons">
+            <li><button onclick="scrollHome()"><img id="nav-home" class="nav-icon bot-bor gray-icon" src="images/home.png"
+                alt="home"></button></li>
+            <li><button onclick="scrollSkills()"><img id="nav-skills" class="nav-icon bot-bor" src="images/skills.png"
+                alt="skills"></button></li>
+        </div>
+        <div class="nav-buttons">
+            <li><button onclick="scrollProjects()"><img id="nav-projects" class="nav-icon bot-bor gray-icon"
+                        src="images/projects.png" alt="projects"></button></li>
+            <li><button onclick="scrollContact()"><img id="nav-contacts" class="nav-icon" src="images/contacts.png"
+                        alt="contact"></button></li>
+        </div>
+    </div>
     <div class="main-container">
         <div class="home">
             <h2 id="about-me-title">About Me</h2>
@@ -24,7 +38,7 @@
                 </div>
                 <div class="about-Louie">
                     <p>
-                        My name is Louie. I am a highly motivated graduate from a Software Development program focusing on web fundamentals,
+                        My name is Llewil. I am a highly motivated graduate from a Software Development program focusing on web fundamentals,
                         Python, MERN, and Java. Seeking an entry level position as a Full Stack Software Developer, to follow my
                         passion for technological innovation and making advancements more accessible. Experienced in
                         fast-paced cooperative environments, with strong communication skills from my background in patient
@@ -75,16 +89,6 @@
             </div>
         </div>
     </div>
-    <ul class="navbar">
-        <li><button onclick="scrollHome()"><img id="nav-home" class="nav-icon bot-bor gray-icon" src="images/home.png"
-                    alt="home"></button></li>
-        <li><button onclick="scrollSkills()"><img id="nav-skills" class="nav-icon bot-bor" src="images/skills.png"
-                    alt="skills"></button></li>
-        <li><button onclick="scrollProjects()"><img id="nav-projects" class="nav-icon bot-bor gray-icon"
-                    src="images/projects.png" alt="projects"></button></li>
-        <li><button onclick="scrollContact()"><img id="nav-contacts" class="nav-icon" src="images/contacts.png"
-                    alt="contact"></button></li>
-    </ul>
     <script src="script.js"></script>
 </body>
 
